# WarehouseRobotsTeam3

./: .gitignore  README.md  WarehouseRobotsTeam3_ExportedCode.txt  conftest.py  package-lock.json  pyproject.toml  requirements.txt
controllers/robot_controller/: comms.py  navigation.py  robot_controller.py  warehouse_layout.py
docs/: ArchitecturePresentation.pptx  architecture.docx
docs/UML/: 01_architecture.puml  02_state_machine.puml  03_sequence_task.puml  04_class_interfaces.puml  render.py
server/: app.py  assign_task.py  conftest.py  main.py  test_aisle_manager.py  test_registry_mqtt.py  test_robot_registry.py  test_server.py
server/api/: app.py  dependencies.py  websocket_event_bridge.py  websocket_manager.py
server/api/routes/: tasks.py  (+3 more)
server/bootstrap/: main.py
server/core/: aisle_manager.py  event_queue.py  events.py  robot_registry.py  server.py  task_dispatcher.py  task_store.py  time_utils.py
server/interfaces/: server_comm.py
src/: __init__.py
src/bootstrap/: robot_factory.py
src/core/: aisle_manager.py  event_queue.py  events.py  navigator.py  odometry.py  pose.py  robot.py  robot_model.py  scheduler.py  state_machine.py  task.py  task_manager.py
src/interfaces/: __init__.py  motion_controller.py  robot_comm.py  robot_state.py  sensors_controller.py
tests/: conftest.py  test_aisle_manager.py  test_collision_manager.py  test_core.py  test_navigator.py  test_odometry.py  test_task_dispatcher.py  test_warehouse.py  test_warehouse_map.py
webapp/: Index.html  index.html
worlds/: .warehouse.wbproj  warehouse.wbt  warehouse_test.wbt
(+31 files in other folders)
